# Android-KillerTool

./: .gitignore  .gitmodules  debug_Samil
APKSign/: 软件更新.url.url
AndroidKiller_v1.3.1/cfgs/: searchhistory.cfg
AndroidKiller_v1.3.1/projects/: .gitignore
AndroidKiller_v1.3.1/projects/50hd/: .gitignore
AndroidKiller_v1.3.1/projects/50hd/Project/: .gitignore  AndroidManifest.xml  apktool.yml
AndroidKiller_v1.3.1/projects/50hd/Project/smali/kotlin/: A.smali  B.smali  C.smali  D$a.smali  D.smali  E$a.smali  E.smali  F.smali  G.smali  H$a.smali  H.smali  I$a.smali  I.smali  InitializedLazyImpl.smali  J.smali  K.smali  KotlinNullPointerException.smali  L$a.smali  L.smali  LazyThreadSafetyMode.smali  M$a.smali  M.smali  N.smali  NoWhenBranchMatchedException.smali  NotImplementedError.smali  O.smali  P.smali  Pair.smali  Q$a.smali  Q.smali  Result$Failure.smali  Result$a.smali  Result.smali  S$a.smali  S.smali  T.smali  Triple.smali  TypeCastException.smali  U.smali  UninitializedPropertyAccessException.smali  (+29 more)
AndroidKiller_v1.3.1/projects/50hd/Project/smali/okhttp3/: Cache$CacheRequestImpl.smali  CertificatePinner$Builder.smali  CipherSuite.smali  ConnectionPool$1.smali  Cookie$Builder.smali  Headers$Builder.smali  OkHttpClient$1.smali  Protocol.smali  RealCall$AsyncCall.smali  RealCall.smali  TlsVersion.smali
AndroidKiller_v1.3.1/projects/50hd/Project/smali/okio/: AsyncTimeout$Watchdog.smali  Base64.smali  Buffer$UnsafeCursor.smali  DeflaterSink.smali  GzipSink.smali  GzipSource.smali  HashingSource.smali  InflaterSource.smali  Okio$1.smali  Okio$2.smali  Options.smali  Pipe$PipeSink.smali  Pipe$PipeSource.smali  Pipe.smali  RealBufferedSink.smali  SegmentedByteString.smali  Utf8.smali  Util.smali
AndroidKiller_v1.3.1/projects/boluo_signed/Project/: .gitignore  AndroidManifest.xml  apktool.yml
Android逆向助手_v2.2/lib/jd-gui/: jd-gui.cfg
Termux/.aria2/: aria2.conf
Termux/.config/yt-dlp/: config
Termux/BotTeg/: lxian.session  lxian.session-journal  run.py
androidKiller-master/androidKiller-master/: CMakeLists.txt
androidKiller-master/androidKiller-master/3rd/qscintilla/: ScintillaQtSlotsDelegate.cpp
androidKiller-master/androidKiller-master/3rd/qscintilla/src/: UniqueString.h
androidKiller-master/androidKiller-master/androidKiller/src/: MainWindow.cpp  MainWindow.h  ProJectInfoPage.cpp  ProJectInfoPage.h  ProjectPage.cpp  TabWidget.h  ToolBar.cpp  ToolBar.h  ToolPage.cpp  main.cpp
androidKiller-master/androidKiller-master/androidKiller/src/core/lexer/: QsciLexerSmali.cpp
androidKiller-master/androidKiller-master/androidKiller/src/core/project/: Project.h
androidKiller-master/androidKiller-master/androidKiller/src/core/zip/zlibMiniZip/: unzip.h  zip.c
androidKiller-master/androidKiller-master/androidKiller/ui/: ContentInfoPage.ui  ProjectDescript.ui  SearchWindow.ui  ToolPage.ui
androidKiller-master/androidKiller-master/lib/: qscintillad.lib  zlibd.lib
androidKiller-master/androidKiller-master/res/tools/sign/: killer.keystore
android_public/app/src/main/: AndroidManifest.xml
android_public/gradle/wrapper/: gradle-wrapper.properties
killer_tools/: Script Manager SManager_v3.0.9_apkpure.com.apk  android.笔记
killer_tools/androidKiller-master/androidKiller-master/: README.md
killer_tools/androidKiller-master/androidKiller-master/3rd/qscintilla/: CMakeLists.txt  ScintillaQtSlotsDelegate.h
killer_tools/androidKiller-master/androidKiller-master/3rd/qscintilla/lexers/: LexSmali.cpp
killer_tools/androidKiller-master/androidKiller-master/androidKiller/: CMakeLists.txt
killer_tools/androidKiller-master/androidKiller-master/androidKiller/src/: Common.cpp  Common.h  ContentBar.cpp  ContentBar.h  ContentInfoPage.cpp  ContentInfoPage.h  ProjectDescriptPage.cpp  ProjectDescriptPage.h  ProjectPage.h  SearchBox.cpp  SearchBox.h  SettingPage.cpp  SettingPage.h  StartPage.cpp  StartPage.h  TabWidget.cpp  ToolButtonBox.cpp  ToolButtonBox.h  ToolPage.h  WorkSpaceSetting.cpp  WorkSpaceSetting.h
killer_tools/androidKiller-master/androidKiller-master/androidKiller/src/core/lexer/: QsciLexerSmali.h
killer_tools/androidKiller-master/androidKiller-master/androidKiller/src/core/project/: Project.cpp  ProjectSeachTextRt.cpp  ProjectSeachTextRt.h
killer_tools/androidKiller-master/androidKiller-master/androidKiller/src/core/zip/: QMiniZip.cpp  QMiniZip.h
killer_tools/androidKiller-master/androidKiller-master/androidKiller/src/core/zip/zlibMiniZip/: iowin32.c  mztools.c  mztools.h  unzip.c
killer_tools/androidKiller-master/androidKiller-master/androidKiller/ui/: MainWindow.ui  Setting.ui  ToolButtonBox.ui  WorkSpaceSetting.ui
killer_tools/androidKiller-master/androidKiller-master/lib/: qscintillad.exp
killer_tools/androidKiller-master/androidKiller-master/res/qss/: toolBar.qss
projects/android_public/app/: build.gradle
projects/android_public/app/src/main/: AndroidManifest.xml
(+29583 files in other folders)
