cmake_minimum_required (VERSION 2.6)
set(CMAKE_PREFIX_PATH $ENV{QTDIR})
set(LibOutPutDirectory "${CMAKE_CURRENT_SOURCE_DIR}/lib")
set(DllOutPutDirectory "${CMAKE_BINARY_DIR}/bin")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${LibOutPutDirectory})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${LibOutPutDirectory})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${DllOutPutDirectory})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${DllOutPutDirectory})
project ("androidKiller")
cmake_policy(SET CMP0015 NEW)
if(POLICY CMP0020)
	cmake_policy(SET CMP0020 NEW)
endif()
set(CMAKE_AUTOMOC ON)

function(SUBDIRLIST filter curdir)
	IF(filter)
		FILE(GLOB SRC ${curdir}/*.h ${curdir}/*.cpp ${curdir}/*.qml ${curdir}/*.c)
		source_group(${filter} FILES ${SRC})
	ENDIF()
    FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
	FOREACH(child ${children})
	IF(IS_DIRECTORY ${curdir}/${child})
		FILE(GLOB SRC ${curdir}/${child}/*.h ${curdir}/${child}/*.cpp ${curdir}/${child}/*.c ${curdir}/${child}/*.qrc ${curdir}/${child}/*.ui ${curdir}/${child}/*.ts ${curdir}/*.qml)
		source_group(${filter}\\${child} FILES ${SRC})
		SUBDIRLIST(${filter}\\${child} ${curdir}/${child})
	ENDIF()
	ENDFOREACH()
endfunction()
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/3rd/qscintilla)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/androidKiller)